--- a/public/index.html
+++ b/public/index.html
@@ -5,26 +5,26 @@
 
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
 
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.13/dist/vue.js"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/cable.js"></script>
     <script src="js/connection.js"></script>
-    <script src="js/channel.js"></script>
-    <script src="js/app.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div id="app">
       <h1>Placar G2</h1>
       <hr />
-      <div id="game-score" data-match-id="1">
+      <div v-for="match in matches">
         <h3>
-          <span id="home_goals">0</span>
+          <span> {{ match.home_goals }}</span>
           <small>x</small>
-          <span id="away_goals">0</span>
+          <span> {{ match.away_goals }} </span>
         </h3>
         <h4>
-          <span id="team_home">Carregando...</span>
+          <span> {{ match.team_home }} </span>
           <small>x</small>
-          <span id="team_away">Carregando...</span>
+          <span> {{ match.team_away }} </span>
         </h4>
       </div>
     </div>
