--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,12 @@
     <title>Placar G2</title>
 
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.13/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/cable.js"></script>
@@ -13,20 +17,66 @@
   </head>
   <body>
     <div id="app">
-      <h1>Placar G2</h1>
-      <hr />
-      <div v-for="match in matches">
-        <h3>
-          <span> {{ match.home_goals }}</span>
-          <small>x</small>
-          <span> {{ match.away_goals }} </span>
-        </h3>
-        <h4>
-          <span> {{ match.team_home }} </span>
-          <small>x</small>
-          <span> {{ match.team_away }} </span>
-        </h4>
-      </div>
+      <v-card>
+        <v-toolbar
+          color="cyan"
+          dark
+          flat
+        >
+          <v-app-bar-nav-icon></v-app-bar-nav-icon>
+
+          <v-toolbar-title>Placar G2</v-toolbar-title>
+
+          <v-spacer></v-spacer>
+
+          <template v-slot:extension>
+            <v-tabs
+              v-model="tab"
+              centered
+              @change="onChangeTab(tab)"
+            >
+              <v-tabs-slider color="yellow"></v-tabs-slider>
+
+              <v-tab
+                v-for="item in items"
+                :key="item"
+              >
+                {{ item }}
+              </v-tab>
+            </v-tabs>
+          </template>
+        </v-toolbar>
+
+        <v-tabs-items v-model="tab">
+          <v-tab-item
+            v-for="item in items"
+            :key="item"
+          >
+            <v-container class="grey lighten-5">
+              <v-row>
+                <template v-for="(match, index) in matches">
+                  <v-col :key="index">
+                    <v-card
+                      class="pa-2"
+                      outlined
+                    >
+                      <v-card-text class="py-md-2"> {{ match.team_home }} </v-card-text>
+                      <v-card-text class="py-md-2"> {{ match.team_away }} </v-card-text>
+                      <v-divider vertical />
+                    </v-card>
+
+                  </v-col>
+                  <v-responsive
+                    v-if="index % 2 === 1"
+                    :key="`width-${index}`"
+                    width="100%"
+                  ></v-responsive>
+                </template>
+              </v-row>
+            </v-container>
+          </v-tab-item>
+        </v-tabs-items>
+      </v-card>
     </div>
   </body>
 </html>
